# lifegame

./: Cargo.toml  README.md
python/: README.md  pyproject.toml
python/src/lifegame/: __init__.py  __main__.py  biosquare.py  genesis.py  lensfilter.py  screen.py  term.py  timer.py
python/src/lifegame/cli/: __init__.py
rust/: Cargo.toml  README.md
rust/benches/: strides_generation.rs
rust/resources/: escseq.json
rust/src/: biosquare.rs  cli.rs  genesis.rs  lensfilter.rs  lib.rs  main.rs  matrix.rs  ndarray.rs  screen.rs  term.rs  timer.rs
rust/src/cli/: choices.rs
rust/src/cli/choices/: cell.rs  color.rs
rust/src/lensfilter/: blockify.rs  digitize.rs  dye.rs  emojify.rs
rust/src/matrix/: display.rs  index.rs  iter.rs
rust/src/screen/: config.rs
rust/src/term/: add.rs  display.rs  ops.rs  utils.rs
src/: biosquare.rs  bounded.rs  cell.rs  cli.rs  error.rs  filter.rs  genesis.rs  main.rs  screen.rs  signal.rs  style.rs  timer.rs  tui.rs
src/filter/: bit.rs  block.rs  dye.rs  emoji.rs  hanzi.rs
