[package]
name = "lifegame"
version = "0.3.9"
edition = "2024"
authors = ["Lingxuan Ye <love@lingxuan.io>"]
categories = ["command-line-utilities"]
repository = "https://github.com/Lingxuan-Ye/lifegame"
readme = "README.md"
license = "MIT"
description = "A simple implementation of the classic cellular automaton, Conway's Game of Life."

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["cargo", "derive"] }
crossterm = "0.29.0"
matreex = { version = "0.37.1", default-features = false }
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_seeder = "0.4.0"

[profile.release]
strip = true
lto = true
panic = "abort"
