[package]
name = "lifegame"
version = "0.3.18"
edition = "2024"
authors = ["Lingxuan Ye <ink@lingxuan.io>"]
categories = ["command-line-utilities"]
repository = "https://github.com/Lingxuan-Ye/lifegame"
readme = "README.md"
license = "MIT"
description = "A simple implementation of the classic cellular automaton, Conway's Game of Life."

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["cargo", "derive"] }
crossterm = "0.29.0"
eoe = "0.4.1"
matreex = { version = "0.42.4", default-features = false }
rand = { version = "0.10.0", features = ["chacha"] }
rand_seeder = "0.5.0"

[profile.release]
strip = true
lto = true
panic = "abort"
